Fixing alignment

--- a/src/MainScreen/Features/Calendar/calendarComp.css
+++ b/src/MainScreen/Features/Calendar/calendarComp.css
@@ -13,7 +13,8 @@
 }
 .Appointments-button {
     display: flex;
-    
+    padding: 20px;
+    padding-bottom: 200px;
 }
 
 .Note-header {
@@ -25,7 +26,7 @@
 
 .Note-button {
     display: flex;
-    
+    padding: 20px;
 }
 .buttons {
     display: flex;
